# ClovaLink

./: README.md  SECURITY.md  install.sh
.github/workflows/: docker-publish.yml
backend/: .dockerignore  Cargo.toml  EXTENSION_DEVELOPER_GUIDE.md  QUICKSTART.md
backend/crates/api/: Cargo.toml
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: jwt.rs  lib.rs  middleware.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: cache.rs  circuit_breaker.rs  db.rs  lib.rs  mailer.rs  models.rs  notification_service.rs  queue.rs  replication.rs  repository.rs  security_service.rs  virus_scan.rs
backend/crates/extensions/: Cargo.toml
backend/crates/extensions/src/: events.rs  lib.rs  manifest.rs  models.rs  permissions.rs  routes.rs  scheduler.rs  webhook.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/migrations/: 001_schema.sql  003_email_templates.sql  004_session_unique_index.sql  005_replication.sql  006_virus_scanning.sql  007_virus_scan_templates.sql  008_virus_scan_indexes.sql  009_quarantine_enhancements.sql  010_virus_scan_auto_suspend.sql  011_virus_scan_resilience.sql
backend/migrations_backup/: 001_schema.sql  002_seed_demo_data.sql  003_security_hardening.sql  004_data_export_setting.sql  005_password_reset_tokens.sql  006_email_templates.sql  007_blocked_extensions.sql  008_security_alerts.sql  009_security_alert_template.sql  010_session_fingerprint.sql  011_tenant_security_policies.sql  012_api_usage.sql
docs/wiki/: API-Reference.md  Admin-Guide.md  Architecture.md  Deployment-Guide.md  Extensions-SDK.md  Home.md  Security.md
frontend/: .dockerignore  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: _headers
frontend/src/: App.tsx  index.css
frontend/src/components/: ActivityFeed.tsx  AddCompanyModal.tsx  AddTenantModal.tsx  Avatar.tsx  ComplianceBadge.tsx  ComplianceBanner.tsx  CreateFileRequestModal.tsx  EmailTemplateEditor.tsx  ExtensionButton.tsx  ExtensionIframe.tsx  ExtensionModule.tsx  ExtensionPanel.tsx  FileActionMenu.tsx  FileActivityModal.tsx  FileGrid.tsx  FilePreviewModal.tsx  FilePropertiesModal.tsx  FileRequestDetailsModal.tsx  FilterModal.tsx  Footer.tsx  HelpPanel.tsx  ImageCropModal.tsx  InviteUserModal.tsx  KeyboardShortcutsModal.tsx  Layout.tsx  LoadingState.tsx  LockFileModal.tsx  LockedField.tsx  Logo.tsx  MaintenanceOverlay.tsx  ManageUserModal.tsx  MoveFileModal.tsx  NewFolderModal.tsx  NotificationBell.tsx  NotificationPreferences.tsx  PasswordInput.tsx  ProtectedRoute.tsx  RenameModal.tsx  RequestSummary.tsx  RolePermissionsModal.tsx  (+8 more)
frontend/src/context/: AuthContext.tsx  ComplianceContext.tsx  ExtensionContext.tsx  GlobalSettingsContext.tsx  KeyboardShortcutsContext.tsx  SettingsContext.tsx  TenantContext.tsx  ThemeContext.tsx
frontend/src/hooks/: shortcutPresets.ts  useExtensions.ts  useKeyboardShortcuts.ts
frontend/src/pages/: AuditLogs.tsx  (+23 more)
infra/: Dockerfile.backend  Dockerfile.frontend  compose.yml
tests/load/: setup.sh  upload_stress.js  virus_scan_load.js
(+46 files in other folders)
