[package]
name = "clovalink_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1.42", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tracing = "0.1"
clovalink_core = { path = "../core" }
sha2 = "0.10"
hex = "0.4"
