[package]
name = "clovalink_core"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "builder"] }
regex = "1"
totp-rs = { version = "5.6", features = ["qr", "gen_secret"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1.42", features = ["sync", "time"] }
tracing = "0.1"
async-trait = "0.1"

# S3 Replication
aws-config = "1.5"
aws-sdk-s3 = "1.65"
aws-credential-types = "1.2"
