[package]
name = "clovalink_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5"
aws-sdk-s3 = "1.65"
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
thiserror = "2"
futures = "0.3"
bytes = "1"
pin-project-lite = "0.2"
